--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,2 +1,97 @@
-<h1>Welcome to Home Page, <div style="color:red;">{{name}}</div></h1>
-<h2>This is the full home page</h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>My movies</title>
+    <style>
+        .img-carousel {
+            width: 1400px;
+            height: 500px;
+            object-fit: cover; /* esto evita que las imágenes se deformen */
+        }
+    </style>
+  </head>
+  <body>
+    {% extends 'base.html' %}
+    {% block content %}
+    <div class="container mt-5"> 
+        
+        <h1 class="mb-3">Upcomming...</h1>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                {% for movie in movies %}
+                    {% if forloop.first %}
+                        <div class="carousel-item active">
+                    {% else %}
+                        <div class="carousel-item">
+                    {% endif %}
+                            <div class="d-flex justify-content-center ">
+                                <img src="{{ movie.image.url }}" class="d-block img-carousel" alt="...">
+                            </div>
+                        </div>
+                {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </button>
+        </div>
+    
+
+
+
+
+        <form action="">
+            <div class="mb-3"> 
+                <label for="searchMovie" class="form-label">
+                    Search for Movie:
+                </label>
+                <input type="text" class="form-control" name="searchMovie"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+        
+
+        <p>Searching for {{ searchTerm }}</p>
+        <br/>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% for movie in movies %}
+            <div v-for="movie in movies" class="col"> 
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ movie.title }}</h5>
+                        <p class="card-text">{{ movie.description }}</p>
+                        {% if movie.url %}
+                            <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <br/>
+        <br/>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+    <script>
+        $('.carousel').carousel();
+    </script>
+    {% endblock content %}
+  </body>
+</html>
